@@ -44,6 +44,7 @@ import de.hybris.platform.order.CartService;
 import de.hybris.platform.order.InvalidCartException;
 import de.hybris.platform.ordersplitting.model.StockLevelModel;
 import de.hybris.platform.product.ProductService;
+import de.hybris.platform.promotions.util.Tuple2;
 import de.hybris.platform.servicelayer.config.ConfigurationService;
 import de.hybris.platform.servicelayer.dto.converter.Converter;
 import de.hybris.platform.servicelayer.i18n.CommonI18NService;
@@ -81,8 +82,6 @@ import java.util.concurrent.CopyOnWriteArrayList;
 import javax.annotation.Resource;
 import javax.xml.bind.JAXBContext;
 import javax.xml.bind.Marshaller;
-
-import net.sourceforge.pmd.util.StringUtil;
 
 import org.apache.commons.beanutils.BeanComparator;
 import org.apache.commons.collections.CollectionUtils;
@@ -144,6 +143,8 @@ import com.tisl.mpl.wsdto.ReservationListWsDTO;
 import com.tisl.mpl.wsdto.StoreLocatorAtsResponse;
 import com.tisl.mpl.wsdto.StoreLocatorAtsResponseObject;
 import com.tisl.mpl.wsdto.StoreLocatorResponseItem;
+
+import net.sourceforge.pmd.util.StringUtil;
 
 
 
@@ -406,10 +407,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			{
 				if (entry != null && entry.getSelectedUssid() != null)
 				{
-					final SellerInformationModel sellerInfoModel = mplSellerInformationService.getSellerDetail(entry
-							.getSelectedUssid());
-					if (sellerInfoModel != null && sellerInfoModel.getRichAttribute() != null
-							&& ((List<RichAttributeModel>) sellerInfoModel.getRichAttribute()).get(0).getDeliveryFulfillModes() != null)
+					final SellerInformationModel sellerInfoModel = mplSellerInformationService
+							.getSellerDetail(entry.getSelectedUssid());
+					if (sellerInfoModel != null && CollectionUtils.isNotEmpty(sellerInfoModel.getRichAttribute())
+							&& null != ((List<RichAttributeModel>) sellerInfoModel.getRichAttribute()).get(0)
+							&& null != ((List<RichAttributeModel>) sellerInfoModel.getRichAttribute()).get(0).getDeliveryFulfillModes()
+							&& null != ((List<RichAttributeModel>) sellerInfoModel.getRichAttribute()).get(0).getDeliveryFulfillModes()
+									.getCode())
 					{
 						final String fulfillmentType = ((List<RichAttributeModel>) sellerInfoModel.getRichAttribute()).get(0)
 								.getDeliveryFulfillModes().getCode();
@@ -443,8 +447,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			{
 				for (final OrderEntryData orderEntryData : sellerOrderData.getEntries())
 				{
-					final SellerInformationModel sellerInfoModel = mplSellerInformationService.getSellerDetail(orderEntryData
-							.getSelectedUssid());
+					final SellerInformationModel sellerInfoModel = mplSellerInformationService
+							.getSellerDetail(orderEntryData.getSelectedUssid());
 					if (sellerInfoModel != null && sellerInfoModel.getRichAttribute() != null
 							&& ((List<RichAttributeModel>) sellerInfoModel.getRichAttribute()).get(0).getDeliveryFulfillModes() != null)
 					{
@@ -510,37 +514,37 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 									deliveryMode = MarketplacecommerceservicesConstants.CLICK_COLLECT;
 								}
 
-								final MplZoneDeliveryModeValueModel deliveryModel = getMplDeliveryCostService().getDeliveryCost(
-										deliveryMode, MarketplacecommerceservicesConstants.INR, pincodeRes.getUssid());
+								final MplZoneDeliveryModeValueModel deliveryModel = getMplDeliveryCostService()
+										.getDeliveryCost(deliveryMode, MarketplacecommerceservicesConstants.INR, pincodeRes.getUssid());
 
 								if (deliveryModel != null && deliveryModel.getValue() != null && deliveryModel.getDeliveryMode() != null)
 								{
 									PriceData priceData = null;
 									if (entry.isIsBOGOapplied())
 									{
-										priceData = formPriceData(Double.valueOf(deliveryModel.getValue().doubleValue()
-												* entry.getQualifyingCount().intValue()));
+										priceData = formPriceData(Double
+												.valueOf(deliveryModel.getValue().doubleValue() * entry.getQualifyingCount().intValue()));
 									}
 									else
 									{
-										priceData = formPriceData(Double.valueOf(deliveryModel.getValue().doubleValue()
-												* entry.getQuantity().doubleValue()));
+										priceData = formPriceData(
+												Double.valueOf(deliveryModel.getValue().doubleValue() * entry.getQuantity().doubleValue()));
 									}
 									deliveryModeData.setCode(checkDataValue(deliveryModel.getDeliveryMode().getCode()));
 									//deliveryModeData.setDescription(checkDataValue(deliveryModel.getDeliveryMode().getDescription()));
 
 
-									final String startValue = deliveryModel.getDeliveryMode().getStart() != null ? ""
-											+ deliveryModel.getDeliveryMode().getStart().intValue()
+									final String startValue = deliveryModel.getDeliveryMode().getStart() != null
+											? "" + deliveryModel.getDeliveryMode().getStart().intValue()
 											: MarketplacecommerceservicesConstants.DEFAULT_START_TIME;
 
-									final String endValue = deliveryModel.getDeliveryMode().getEnd() != null ? ""
-											+ deliveryModel.getDeliveryMode().getEnd().intValue()
+									final String endValue = deliveryModel.getDeliveryMode().getEnd() != null
+											? "" + deliveryModel.getDeliveryMode().getEnd().intValue()
 											: MarketplacecommerceservicesConstants.DEFAULT_END_TIME;
 
 
-									deliveryModeData.setDescription(getDeliveryModeDescription(pincodeRes.getUssid(), deliveryModel
-											.getDeliveryMode().getCode(), startValue, endValue));
+									deliveryModeData.setDescription(getDeliveryModeDescription(pincodeRes.getUssid(),
+											deliveryModel.getDeliveryMode().getCode(), startValue, endValue));
 
 									deliveryModeData.setName(checkDataValue(deliveryModel.getDeliveryMode().getName()));
 									deliveryModeData.setSellerArticleSKU(checkDataValue(pincodeRes.getUssid()));
@@ -641,17 +645,17 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 							//deliveryModeData.setDescription(checkDataValue(deliveryModel.getDeliveryMode().getDescription()));
 
 
-							final String startValue = deliveryModel.getDeliveryMode().getStart() != null ? ""
-									+ deliveryModel.getDeliveryMode().getStart().intValue()
+							final String startValue = deliveryModel.getDeliveryMode().getStart() != null
+									? "" + deliveryModel.getDeliveryMode().getStart().intValue()
 									: MarketplacecommerceservicesConstants.DEFAULT_START_TIME;
 
-							final String endValue = deliveryModel.getDeliveryMode().getEnd() != null ? ""
-									+ deliveryModel.getDeliveryMode().getEnd().intValue()
+							final String endValue = deliveryModel.getDeliveryMode().getEnd() != null
+									? "" + deliveryModel.getDeliveryMode().getEnd().intValue()
 									: MarketplacecommerceservicesConstants.DEFAULT_END_TIME;
 
 
-							deliveryModeData.setDescription(getDeliveryModeDescription(pincodeRes.getUssid(), deliveryModel
-									.getDeliveryMode().getCode(), startValue, endValue));
+							deliveryModeData.setDescription(getDeliveryModeDescription(pincodeRes.getUssid(),
+									deliveryModel.getDeliveryMode().getCode(), startValue, endValue));
 
 							deliveryModeData.setName(checkDataValue(deliveryModel.getDeliveryMode().getName()));
 							deliveryModeData.setSellerArticleSKU(checkDataValue(pincodeRes.getUssid()));
@@ -717,13 +721,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 							//	deliveryMode = MarketplacecommerceservicesConstants.CLICK_COLLECT;
 							//}
 
-							final MplZoneDeliveryModeValueModel deliveryModel = getMplDeliveryCostService().getDeliveryCost(
-									deliveryMode, MarketplacecommerceservicesConstants.INR, pincodeRes.getUssid());
+							final MplZoneDeliveryModeValueModel deliveryModel = getMplDeliveryCostService().getDeliveryCost(deliveryMode,
+									MarketplacecommerceservicesConstants.INR, pincodeRes.getUssid());
 
 							if (deliveryModel != null && deliveryModel.getValue() != null && deliveryModel.getDeliveryMode() != null)
 							{
-								final PriceData priceData = formPriceData(Double.valueOf(deliveryModel.getValue().doubleValue()
-										* entry.getQuantity().doubleValue()));
+								final PriceData priceData = formPriceData(
+										Double.valueOf(deliveryModel.getValue().doubleValue() * entry.getQuantity().doubleValue()));
 								deliveryModeData.setCode(checkDataValue(deliveryModel.getDeliveryMode().getCode()));
 								deliveryModeData.setDescription(checkDataValue(deliveryModel.getDeliveryMode().getDescription()));
 								deliveryModeData.setName(checkDataValue(deliveryModel.getDeliveryMode().getName()));
@@ -812,8 +816,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 					richAttributeModel = (List<RichAttributeModel>) sellerInfoModel.getRichAttribute();
 					if (null != richAttributeModel && !richAttributeModel.isEmpty())
 					{
-						leadTime = richAttributeModel.get(0).getLeadTimeForHomeDelivery() != null ? richAttributeModel.get(0)
-								.getLeadTimeForHomeDelivery() : Integer.valueOf(0);
+						leadTime = richAttributeModel.get(0).getLeadTimeForHomeDelivery() != null
+								? richAttributeModel.get(0).getLeadTimeForHomeDelivery() : Integer.valueOf(0);
 					}
 					LOG.debug(" >> Lead time for Home delivery  " + leadTime);
 				}
@@ -833,8 +837,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 		}
 		catch (final Exception ex)
 		{
-			ExceptionUtil.etailNonBusinessExceptionHandler(new EtailNonBusinessExceptions(ex,
-					MarketplacecommerceservicesConstants.E0000));
+			ExceptionUtil
+					.etailNonBusinessExceptionHandler(new EtailNonBusinessExceptions(ex, MarketplacecommerceservicesConstants.E0000));
 		}
 		return description;
 	}
@@ -957,7 +961,7 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 	@Override
 	public List<Wishlist2EntryModel> getGiftYourselfDetailsMobile(final int minGiftQuantity,
 			final List<Wishlist2Model> allWishlists, final String pincode, final Collection<CartModel> cartModelList)
-			throws CMSItemNotFoundException
+					throws CMSItemNotFoundException
 	{
 
 		final List<Wishlist2EntryModel> productDataList = new ArrayList<Wishlist2EntryModel>();
@@ -1012,10 +1016,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 			if (CollectionUtils.isNotEmpty(cartModelList) && (((List<CartModel>) cartModelList).get(0) != null))
 			{
-				finalgiftList = preparingFinalList(productDataList, pincode, (((List<CartModel>) cartModelList).get(0)));
+				//finalgiftList = preparingFinalList(productDataList, pincode, (((List<CartModel>) cartModelList).get(0))); // TISPT-179 Point 3
+				final Tuple2<?, ?> wishListPincodeObject = preparingFinalList(productDataList, pincode,
+						(((List<CartModel>) cartModelList).get(0)));
+				finalgiftList = (List<Wishlist2EntryModel>) wishListPincodeObject.getFirst();
 			}
-
-
 		}
 		return finalgiftList;
 	}
@@ -1025,28 +1030,30 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 	 * @param minGiftQuantity
 	 * @param allWishlists
 	 * @param pincode
-	 * @return : List<Wishlist2EntryModel>
+	 * @param cartModel
+	 *           //TISPT-179 // / * @return : List<Wishlist2EntryModel>
+	 * @return : Tuple2<?, ?> //TISPT-179 Point 3
 	 * @throws CMSItemNotFoundException
 	 */
+	//@Override
+	//public List<Wishlist2EntryModel> getGiftYourselfDetails(final int minGiftQuantity, final List<Wishlist2Model> allWishlists,final String pincode, final CartModel cartModel) throws CMSItemNotFoundException
 	@Override
-	public List<Wishlist2EntryModel> getGiftYourselfDetails(final int minGiftQuantity, final List<Wishlist2Model> allWishlists,
-			final String pincode) throws CMSItemNotFoundException
+	public Tuple2<?, ?> getGiftYourselfDetails(final int minGiftQuantity, final List<Wishlist2Model> allWishlists,
+			final String pincode, final CartModel cartModel) throws CMSItemNotFoundException
 	{
 
 		final List<Wishlist2EntryModel> productDataList = new ArrayList<Wishlist2EntryModel>();
-		List<Wishlist2EntryModel> finalgiftList = new ArrayList<Wishlist2EntryModel>();
+		//final List<Wishlist2EntryModel> finalgiftList = new ArrayList<Wishlist2EntryModel>(); TISPT-179 Ponit 3
 
-		if (allWishlists != null && !allWishlists.isEmpty())
+		//if (allWishlists != null && !allWishlists.isEmpty())
+		if (CollectionUtils.isNotEmpty(allWishlists))
 		{
 			for (final Wishlist2Model wishlistEntry : allWishlists) //traversing all wishlists
 			{
-
 				for (final Wishlist2EntryModel entryWishlist : wishlistEntry.getEntries())//getting the latest two
 				{
 					productDataList.add(entryWishlist);
 				}
-
-
 			}
 		}
 		LOG.info("UnSorted productDataList" + productDataList);
@@ -1055,10 +1062,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 		final BeanComparator fieldComparator = new BeanComparator("creationtime", Collections.reverseOrder());
 		Collections.sort(productDataList, fieldComparator);
 		LOG.info("Sorted productDataList" + productDataList);
-		final CartModel cartModel = cartService.getSessionCart();
+		//final CartModel cartModel = cartService.getSessionCart(); TISPT-179 Point 2
+		//	finalgiftList = preparingFinalList(productDataList, pincode, cartModel); TISPT-179 Point 3
+		//return finalgiftList; ISPT-179 Point 3
 
-		finalgiftList = preparingFinalList(productDataList, pincode, cartModel);
-		return finalgiftList;
+		final Tuple2<?, ?> wishListPincodeObj = preparingFinalList(productDataList, pincode, cartModel);
+		return wishListPincodeObj;
+
 	}
 
 	/**
@@ -1069,20 +1079,19 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 	 * @throws CMSItemNotFoundException
 	 */
 
-	private List<Wishlist2EntryModel> preparingFinalList(final List<Wishlist2EntryModel> productDataList, final String pincode,
+	private Tuple2<List<?>, List<?>> preparingFinalList(final List<Wishlist2EntryModel> productDataList, final String pincode,
 			final CartModel cartModel) throws CMSItemNotFoundException
 	{
-
-
 		final List<Wishlist2EntryModel> giftList = new ArrayList<Wishlist2EntryModel>();
+		List<PinCodeResponseData> pinCodeResponseDataList = null;
 		if (CollectionUtils.isNotEmpty(productDataList))
 		{
 
 			final Map<String, Wishlist2EntryModel> wishListEntryMap = new HashMap<String, Wishlist2EntryModel>();
-			final int wishlistDisplayQuantity = getSiteConfigService().getInt(
-					MarketplacecommerceservicesConstants.WISHLIST_DISPLAY_QUANTITY, 2);
+			final int wishlistDisplayQuantity = getSiteConfigService()
+					.getInt(MarketplacecommerceservicesConstants.WISHLIST_DISPLAY_QUANTITY, 2);
 
-			// For creating distinct wish list with repect to ussid
+			// For creating distinct wish list with respect to ussid
 			for (final Wishlist2EntryModel wishListEntryModel : productDataList)
 			{
 				boolean ussidExists = false;
@@ -1128,9 +1137,10 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 			final Iterator pincodeIterator = sortedMap.entrySet().iterator();
 
+
 			if (StringUtil.isNotEmpty(pincode))
 			{
-				List<PinCodeResponseData> pinCodeResponseDataList = null;
+
 				final List<PincodeServiceData> pincodeRequestDataList = fetchWishlistPincodeRequestData(sortedMap);
 				if (CollectionUtils.isNotEmpty(pincodeRequestDataList))
 				{
@@ -1149,7 +1159,7 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 										&& pincodServicableData.getUssid().equalsIgnoreCase(wishlist2EntryModel.getUssid())
 										&& null != pincodServicableData.getStockCount()
 										&& pincodServicableData.getStockCount().intValue() > 0
-										&& pincodServicableData.getIsServicable().equalsIgnoreCase("Y"))
+										&& pincodServicableData.getIsServicable().equalsIgnoreCase(MarketplacecommerceservicesConstants.Y))
 								{
 									giftList.add(wishlist2EntryModel);
 								}
@@ -1168,8 +1178,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 					final Wishlist2EntryModel wishlist2EntryModel = (Wishlist2EntryModel) entry.getValue();
 					final String articleSkuID = wishlist2EntryModel.getUssid();
 
-					final FlexibleSearchService flexibleSearchService = Registry.getApplicationContext().getBean(
-							FlexibleSearchService.class);
+					final FlexibleSearchService flexibleSearchService = Registry.getApplicationContext()
+							.getBean(FlexibleSearchService.class);
 
 					if (articleSkuID != null)
 					{
@@ -1187,7 +1197,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			}
 
 		}
-		return giftList;
+
+		return new Tuple2(giftList, pinCodeResponseDataList); //TISPT-179
+		//return giftList; //TISPT-179
 	}
 
 	/*
@@ -1212,8 +1224,7 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 		final List<SellerInformationModel> sellerInformationModelList = mplDelistingService.getModelforUSSID(ussid, onlineCatalog);
 
-		if (CollectionUtils.isNotEmpty(sellerInformationModelList)
-				&& sellerInformationModelList.get(0) != null
+		if (CollectionUtils.isNotEmpty(sellerInformationModelList) && sellerInformationModelList.get(0) != null
 				&& (sellerInformationModelList.get(0).getSellerAssociationStatus() != null && sellerInformationModelList.get(0)
 						.getSellerAssociationStatus().getCode().equalsIgnoreCase(MarketplacecommerceservicesConstants.NO)))
 		{
@@ -1229,8 +1240,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 		}
 		else
 		{
-			final Date onlineDate = (wishlistEntryModel.getProduct() != null && wishlistEntryModel.getProduct().getOnlineDate() != null) ? wishlistEntryModel
-					.getProduct().getOnlineDate() : sysDate;
+			final Date onlineDate = (wishlistEntryModel.getProduct() != null
+					&& wishlistEntryModel.getProduct().getOnlineDate() != null) ? wishlistEntryModel.getProduct().getOnlineDate()
+							: sysDate;
 			if (onlineDate.after(sysDate))
 			{
 				valid = false;
@@ -1274,29 +1286,29 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 					LOG.debug("Product Model is null for the wishlist Product");
 				}
 
-				final SellerInformationModel sellerInfo = getMplSellerInformationService().getSellerDetail(
-						wishlist2EntryModel.getUssid());
+				final SellerInformationModel sellerInfo = getMplSellerInformationService()
+						.getSellerDetail(wishlist2EntryModel.getUssid());
 				if (wishlist2EntryModel.getUssid() != null && sellerInfo != null)
 				{
 					String fullfillmentType = MarketplacecommerceservicesConstants.EMPTYSPACE;
 					List<RichAttributeModel> richAttributeModel = new ArrayList<RichAttributeModel>();
 
-					final SellerInformationModel sellerInfoModel = getMplSellerInformationService().getSellerDetail(
-							wishlist2EntryModel.getUssid());
+					final SellerInformationModel sellerInfoModel = getMplSellerInformationService()
+							.getSellerDetail(wishlist2EntryModel.getUssid());
 
 					if (sellerInfoModel != null && sellerInfoModel.getRichAttribute() != null)
 					{
 						richAttributeModel = (List<RichAttributeModel>) sellerInfoModel.getRichAttribute();
-						fullfillmentType = richAttributeModel.get(0).getDeliveryFulfillModes() != null ? richAttributeModel.get(0)
-								.getDeliveryFulfillModes().getCode() : "";
+						fullfillmentType = richAttributeModel.get(0).getDeliveryFulfillModes() != null
+								? richAttributeModel.get(0).getDeliveryFulfillModes().getCode() : "";
 					}
 					else
 					{
 						LOG.info("preparingFinalList sellerInfoModel is null ");
 					}
 
-					final List<MplZoneDeliveryModeValueModel> deliveryModes = getMplDeliveryCostService().getDeliveryModesAndCost(
-							MarketplacecommerceservicesConstants.INR, wishlist2EntryModel.getUssid());
+					final List<MplZoneDeliveryModeValueModel> deliveryModes = getMplDeliveryCostService()
+							.getDeliveryModesAndCost(MarketplacecommerceservicesConstants.INR, wishlist2EntryModel.getUssid());
 					if (null != deliveryModes && !deliveryModes.isEmpty())
 					{
 						for (final MplZoneDeliveryModeValueModel deliveryEntry : deliveryModes)
@@ -1315,8 +1327,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 					if (richAttributeModel.get(0).getShippingModes() != null
 							&& richAttributeModel.get(0).getShippingModes().getCode() != null)
 					{
-						pincodeServiceData.setTransportMode(MplCodeMasterUtility.getglobalCode(richAttributeModel.get(0)
-								.getShippingModes().getCode().toUpperCase()));
+						pincodeServiceData.setTransportMode(
+								MplCodeMasterUtility.getglobalCode(richAttributeModel.get(0).getShippingModes().getCode().toUpperCase()));
 					}
 					else
 					{
@@ -1325,10 +1337,10 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 					pincodeServiceData.setSellerId(sellerInfo.getSellerID());
 					pincodeServiceData.setUssid(wishlist2EntryModel.getUssid());
 
-					if (null != richAttributeModel.get(0).getPaymentModes()
-							&& ((PaymentModesEnum.valueOf("COD")).toString().equalsIgnoreCase(
-									richAttributeModel.get(0).getPaymentModes().getCode()) || (PaymentModesEnum.valueOf("BOTH"))
-									.toString().equalsIgnoreCase(richAttributeModel.get(0).getPaymentModes().getCode())))
+					if (null != richAttributeModel.get(0).getPaymentModes() && ((PaymentModesEnum.valueOf("COD")).toString()
+							.equalsIgnoreCase(richAttributeModel.get(0).getPaymentModes().getCode())
+							|| (PaymentModesEnum.valueOf("BOTH")).toString()
+									.equalsIgnoreCase(richAttributeModel.get(0).getPaymentModes().getCode())))
 					{
 						pincodeServiceData.setIsCOD(MarketplacecommerceservicesConstants.Y);
 					}
@@ -1388,22 +1400,22 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			String fullfillmentType = MarketplacecommerceservicesConstants.EMPTYSPACE;
 			List<RichAttributeModel> richAttributeModel = new ArrayList<RichAttributeModel>();
 
-			final SellerInformationModel sellerInfoModel = getMplSellerInformationService().getSellerDetail(
-					wishlist2EntryModel.getUssid());
+			final SellerInformationModel sellerInfoModel = getMplSellerInformationService()
+					.getSellerDetail(wishlist2EntryModel.getUssid());
 
 			if (sellerInfoModel != null && sellerInfoModel.getRichAttribute() != null)
 			{
 				richAttributeModel = (List<RichAttributeModel>) sellerInfoModel.getRichAttribute();
-				fullfillmentType = richAttributeModel.get(0).getDeliveryFulfillModes() != null ? richAttributeModel.get(0)
-						.getDeliveryFulfillModes().getCode() : "";
+				fullfillmentType = richAttributeModel.get(0).getDeliveryFulfillModes() != null
+						? richAttributeModel.get(0).getDeliveryFulfillModes().getCode() : "";
 			}
 			else
 			{
 				LOG.info("preparingFinalList sellerInfoModel is null ");
 			}
 
-			final List<MplZoneDeliveryModeValueModel> deliveryModes = getMplDeliveryCostService().getDeliveryModesAndCost(
-					MarketplacecommerceservicesConstants.INR, wishlist2EntryModel.getUssid());
+			final List<MplZoneDeliveryModeValueModel> deliveryModes = getMplDeliveryCostService()
+					.getDeliveryModesAndCost(MarketplacecommerceservicesConstants.INR, wishlist2EntryModel.getUssid());
 			if (null != deliveryModes && !deliveryModes.isEmpty())
 			{
 				for (final MplZoneDeliveryModeValueModel deliveryEntry : deliveryModes)
@@ -1422,8 +1434,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			if (richAttributeModel.get(0).getShippingModes() != null
 					&& richAttributeModel.get(0).getShippingModes().getCode() != null)
 			{
-				pincodeServiceData.setTransportMode(MplCodeMasterUtility.getglobalCode(richAttributeModel.get(0).getShippingModes()
-						.getCode().toUpperCase()));
+				pincodeServiceData.setTransportMode(
+						MplCodeMasterUtility.getglobalCode(richAttributeModel.get(0).getShippingModes().getCode().toUpperCase()));
 			}
 			else
 			{
@@ -1432,9 +1444,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			pincodeServiceData.setSellerId(sellerInfo.getSellerID());
 			pincodeServiceData.setUssid(wishlist2EntryModel.getUssid());
 
-			if (null != richAttributeModel.get(0).getPaymentModes()
-					&& ((PaymentModesEnum.valueOf("COD")).toString().equalsIgnoreCase(
-							richAttributeModel.get(0).getPaymentModes().getCode()) || (PaymentModesEnum.valueOf("BOTH")).toString()
+			if (null != richAttributeModel.get(0).getPaymentModes() && ((PaymentModesEnum.valueOf("COD")).toString()
+					.equalsIgnoreCase(richAttributeModel.get(0).getPaymentModes().getCode())
+					|| (PaymentModesEnum.valueOf("BOTH")).toString()
 							.equalsIgnoreCase(richAttributeModel.get(0).getPaymentModes().getCode())))
 			{
 				pincodeServiceData.setIsCOD(MarketplacecommerceservicesConstants.Y);
@@ -1460,8 +1472,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 	 * @throws InvalidCartException
 	 */
 	@Override
-	public CartModel createCart(final String emailId, final String baseSiteId) throws CommerceCartModificationException,
-			InvalidCartException
+	public CartModel createCart(final String emailId, final String baseSiteId)
+			throws CommerceCartModificationException, InvalidCartException
 	{
 
 		CartModel cart = null;
@@ -1884,10 +1896,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			catch (final ClientEtailNonBusinessExceptions e)
 			{
 				LOG.error("::::::Exception in calling OMS Pincode service:::::::::" + e.getErrorCode());
-				if (null != e.getErrorCode()
-						&& (MarketplacecclientservicesConstants.O0001_EXCEP.equalsIgnoreCase(e.getErrorCode())
-								|| MarketplacecclientservicesConstants.O0002_EXCEP.equalsIgnoreCase(e.getErrorCode()) || MarketplacecclientservicesConstants.O0007_EXCEP
-									.equalsIgnoreCase(e.getErrorCode())))
+				if (null != e.getErrorCode() && (MarketplacecclientservicesConstants.O0001_EXCEP.equalsIgnoreCase(e.getErrorCode())
+						|| MarketplacecclientservicesConstants.O0002_EXCEP.equalsIgnoreCase(e.getErrorCode())
+						|| MarketplacecclientservicesConstants.O0007_EXCEP.equalsIgnoreCase(e.getErrorCode())))
 				{
 					response = callPincodeServiceabilityCommerce(pin, reqData);
 				}
@@ -2011,8 +2022,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 		LOG.info("*********************** Commerce Pincode Serviceability *************");
 		final List<PinCodeDeliveryModeResponse> pinCodeDeliveryModeResponseList = new ArrayList<PinCodeDeliveryModeResponse>();
 		final PinCodeDeliveryModeListResponse responsefromOMS = new PinCodeDeliveryModeListResponse();
-		final List<PincodeServiceabilityDataModel> fallbackPincodeList = mplPincodeServiceDao.getPincodeServicableDataAtCommerce(
-				pincode, pincodeServiceDataList);
+		final List<PincodeServiceabilityDataModel> fallbackPincodeList = mplPincodeServiceDao
+				.getPincodeServicableDataAtCommerce(pincode, pincodeServiceDataList);
 		LOG.info("*********************** Data Present in  fallback table  :" + CollectionUtils.isNotEmpty(fallbackPincodeList));
 
 		responsefromOMS.setPincode(pincode);
@@ -2059,17 +2070,17 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 				// Generating request xml
 
-				final Integer stockCount = (stockLevelMap.get(pincodeServiceData.getUssid()) != null) ? Integer.valueOf(stockLevelMap
-						.get(pincodeServiceData.getUssid()).intValue()) : Integer.valueOf(0);
-				final boolean isCodLimitFailed = (pincodeServiceData.getPrice().longValue() >= codLowerLimit.longValue() && pincodeServiceData
-						.getPrice().longValue() <= codUpperLimit.longValue()) ? false : true;
-				final boolean isCodEligible = (isCodLimitFailed || pincodeServiceData.getIsCOD().equalsIgnoreCase(
-						MarketplacecclientservicesConstants.N)) ? false : true;
-				final boolean isPrepaidEligible = (pincodeServiceData.getPrice().longValue() >= prepaidLowerLimit.longValue() && pincodeServiceData
-						.getPrice().longValue() <= prepaidUpperLimit.longValue()) ? true : false;
+				final Integer stockCount = (stockLevelMap.get(pincodeServiceData.getUssid()) != null)
+						? Integer.valueOf(stockLevelMap.get(pincodeServiceData.getUssid()).intValue()) : Integer.valueOf(0);
+				final boolean isCodLimitFailed = (pincodeServiceData.getPrice().longValue() >= codLowerLimit.longValue()
+						&& pincodeServiceData.getPrice().longValue() <= codUpperLimit.longValue()) ? false : true;
+				final boolean isCodEligible = (isCodLimitFailed
+						|| pincodeServiceData.getIsCOD().equalsIgnoreCase(MarketplacecclientservicesConstants.N)) ? false : true;
+				final boolean isPrepaidEligible = (pincodeServiceData.getPrice().longValue() >= prepaidLowerLimit.longValue()
+						&& pincodeServiceData.getPrice().longValue() <= prepaidUpperLimit.longValue()) ? true : false;
 
-				isPincodeServiceable = (!isDataPresentInFallback || (!isPrepaidEligible && !isCodEligible)) ? MarketplacecclientservicesConstants.N
-						: isPincodeServiceable;
+				isPincodeServiceable = (!isDataPresentInFallback || (!isPrepaidEligible && !isCodEligible))
+						? MarketplacecclientservicesConstants.N : isPincodeServiceable;
 				//Added the code for CNC Delivery Mode for OMS Fall Back
 				DeliveryModeResOMSWsDto deliveryModeDto = null;
 				if (deliveryModeData.getCode().equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT))
@@ -2091,8 +2102,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 					deliveryModeDto.setIsCOD(MarketplacecclientservicesConstants.N);
 					deliveryModeDto.setIsCODLimitFailed(MarketplacecclientservicesConstants.N);
 					deliveryModeDto.setIsPrepaidEligible(MarketplacecclientservicesConstants.Y);
-					deliveryModeDto.setDeliveryDate(new SimpleDateFormat(MarketplacecclientservicesConstants.DELIVERY_DATE_FORMATTER)
-							.format(new Date()));
+					deliveryModeDto.setDeliveryDate(
+							new SimpleDateFormat(MarketplacecclientservicesConstants.DELIVERY_DATE_FORMATTER).format(new Date()));
 				}
 				else
 				{
@@ -2100,14 +2111,14 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 					deliveryModeDto.setType(getDeliveryGlobalCode(deliveryModeData.getCode()));
 					deliveryModeDto.setInventory(String.valueOf(stockCount));
 					deliveryModeDto.setIsPincodeServiceable(isPincodeServiceable);
-					deliveryModeDto.setIsCOD((isCodEligible) ? MarketplacecclientservicesConstants.Y
-							: MarketplacecclientservicesConstants.N);
-					deliveryModeDto.setIsCODLimitFailed((isCodLimitFailed) ? MarketplacecclientservicesConstants.Y
-							: MarketplacecclientservicesConstants.N);
-					deliveryModeDto.setIsPrepaidEligible((isPrepaidEligible) ? MarketplacecclientservicesConstants.Y
-							: MarketplacecclientservicesConstants.N);
-					deliveryModeDto.setDeliveryDate(new SimpleDateFormat(MarketplacecclientservicesConstants.DELIVERY_DATE_FORMATTER)
-							.format(new Date()));
+					deliveryModeDto
+							.setIsCOD((isCodEligible) ? MarketplacecclientservicesConstants.Y : MarketplacecclientservicesConstants.N);
+					deliveryModeDto.setIsCODLimitFailed(
+							(isCodLimitFailed) ? MarketplacecclientservicesConstants.Y : MarketplacecclientservicesConstants.N);
+					deliveryModeDto.setIsPrepaidEligible(
+							(isPrepaidEligible) ? MarketplacecclientservicesConstants.Y : MarketplacecclientservicesConstants.N);
+					deliveryModeDto.setDeliveryDate(
+							new SimpleDateFormat(MarketplacecclientservicesConstants.DELIVERY_DATE_FORMATTER).format(new Date()));
 				}
 
 				deliveryModeResOMSWsDtoList.add(deliveryModeDto);
@@ -2207,30 +2218,27 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 	private boolean compareDeliveryModes(final String deliveryMode1, final String deliveryMode2)
 	{
 		boolean isValid = false;
-		if (StringUtils.isNotEmpty(deliveryMode1)
-				&& StringUtils.isNotEmpty(deliveryMode2)
-				&& (deliveryMode1.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY) || deliveryMode1
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.HD))
-				&& (deliveryMode2.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY) || deliveryMode2
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.HD)))
+		if (StringUtils.isNotEmpty(deliveryMode1) && StringUtils.isNotEmpty(deliveryMode2)
+				&& (deliveryMode1.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)
+						|| deliveryMode1.equalsIgnoreCase(MarketplacecommerceservicesConstants.HD))
+				&& (deliveryMode2.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)
+						|| deliveryMode2.equalsIgnoreCase(MarketplacecommerceservicesConstants.HD)))
 		{
 			isValid = true;
 		}
-		else if (StringUtils.isNotEmpty(deliveryMode1)
-				&& StringUtils.isNotEmpty(deliveryMode2)
-				&& (deliveryMode1.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY) || deliveryMode1
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.ED))
-				&& (deliveryMode2.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY) || deliveryMode2
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.ED)))
+		else if (StringUtils.isNotEmpty(deliveryMode1) && StringUtils.isNotEmpty(deliveryMode2)
+				&& (deliveryMode1.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)
+						|| deliveryMode1.equalsIgnoreCase(MarketplacecommerceservicesConstants.ED))
+				&& (deliveryMode2.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)
+						|| deliveryMode2.equalsIgnoreCase(MarketplacecommerceservicesConstants.ED)))
 		{
 			isValid = true;
 		}
-		else if (StringUtils.isNotEmpty(deliveryMode1)
-				&& StringUtils.isNotEmpty(deliveryMode2)
-				&& (deliveryMode1.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT) || deliveryMode1
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.CnC))
-				&& (deliveryMode2.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT) || deliveryMode2
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.CnC)))
+		else if (StringUtils.isNotEmpty(deliveryMode1) && StringUtils.isNotEmpty(deliveryMode2)
+				&& (deliveryMode1.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)
+						|| deliveryMode1.equalsIgnoreCase(MarketplacecommerceservicesConstants.CnC))
+				&& (deliveryMode2.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)
+						|| deliveryMode2.equalsIgnoreCase(MarketplacecommerceservicesConstants.CnC)))
 		{
 			isValid = true;
 		}
@@ -2262,8 +2270,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			if (cartId != null && cartData != null && pincode != null)
 			{
 				List<ReservationItemWsDTO> reservationData = new ArrayList<ReservationItemWsDTO>();
-				final FlexibleSearchService flexibleSearchService = Registry.getApplicationContext().getBean(
-						FlexibleSearchService.class);
+				final FlexibleSearchService flexibleSearchService = Registry.getApplicationContext()
+						.getBean(FlexibleSearchService.class);
 
 				AbstractOrderModel cartModel = new AbstractOrderModel();
 				cartModel.setCode(cartId);
@@ -2282,10 +2290,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 				{
 					LOG.error("::::::Mobility  ClientEtailNonBusinessExceptions in calling OMS Inventory reservation:::::::::"
 							+ e.getErrorCode());
-					if (null != e.getErrorCode()
-							&& (MarketplacecclientservicesConstants.O0003_EXCEP.equalsIgnoreCase(e.getErrorCode())
-									|| MarketplacecclientservicesConstants.O0004_EXCEP.equalsIgnoreCase(e.getErrorCode()) || MarketplacecclientservicesConstants.O0007_EXCEP
-										.equalsIgnoreCase(e.getErrorCode())))
+					if (null != e.getErrorCode() && (MarketplacecclientservicesConstants.O0003_EXCEP.equalsIgnoreCase(e.getErrorCode())
+							|| MarketplacecclientservicesConstants.O0004_EXCEP.equalsIgnoreCase(e.getErrorCode())
+							|| MarketplacecclientservicesConstants.O0007_EXCEP.equalsIgnoreCase(e.getErrorCode())))
 					{
 						inventoryReservListResponse = callInventoryReservationCommerce(cartdatalist);
 					}
@@ -2303,8 +2310,7 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 					{
 						for (int i = 0; i < reservationData.size(); i++)
 						{
-							if (null != reservationData.get(i)
-									&& null != reservationData.get(i).getReservationStatus()
+							if (null != reservationData.get(i) && null != reservationData.get(i).getReservationStatus()
 									&& reservationData.get(i).getReservationStatus()
 											.equalsIgnoreCase(MarketplacecclientservicesConstants.OMS_INVENTORY_RESV_SUCCESS))
 							{
@@ -2313,10 +2319,21 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 							}
 							else
 							{
+								LOG.debug("Inventory reservationData for Mobile from OMS is not success ###### =" + cartId);
 								throw new EtailBusinessExceptions(MarketplacecommerceservicesConstants.B9047);
 							}
 						}
 					}
+					else
+					{
+						LOG.debug("Inventory reservationData for Mobile from OMS is empty###### =" + cartId);
+						throw new EtailBusinessExceptions(MarketplacecommerceservicesConstants.B9047);
+					}
+				}
+				else
+				{
+					LOG.debug("InventoryReservListResponse for mobile is null ##### =" + cartId);
+					throw new EtailBusinessExceptions(MarketplacecommerceservicesConstants.B9047);
 				}
 			}
 		}
@@ -2583,8 +2600,7 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 					{
 						final PcmProductVariantModel selectedVariantModel = (PcmProductVariantModel) productModel;
 						ProductData productData = null;
-						productData = getProductFacade().getProductForOptions(
-								productModel,
+						productData = getProductFacade().getProductForOptions(productModel,
 								Arrays.asList(ProductOption.BASIC, ProductOption.PRICE, ProductOption.SUMMARY, ProductOption.DESCRIPTION,
 										ProductOption.GALLERY, ProductOption.CATEGORIES, ProductOption.REVIEW, ProductOption.PROMOTIONS,
 										ProductOption.CLASSIFICATION, ProductOption.VARIANT_FULL, ProductOption.VOLUME_PRICES,
@@ -2660,13 +2676,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			{
 				for (final CategoryData category : productData.getCategories())
 				{
-					if (null != category
-							&& null != category.getCode()
-							&& null != getConfigurationService().getConfiguration().getString(
-									MarketplacecommerceservicesConstants.SALESCATEGORYTYPE)
-							&& category.getCode().startsWith(
-									getConfigurationService().getConfiguration().getString(
-											MarketplacecommerceservicesConstants.SALESCATEGORYTYPE)) && null != category.getName())
+					if (null != category && null != category.getCode()
+							&& null != getConfigurationService().getConfiguration()
+									.getString(MarketplacecommerceservicesConstants.SALESCATEGORYTYPE)
+							&& category.getCode()
+									.startsWith(getConfigurationService().getConfiguration()
+											.getString(MarketplacecommerceservicesConstants.SALESCATEGORYTYPE))
+							&& null != category.getName())
 					{
 						productCategory = category.getCode();
 						return productCategory;
@@ -2703,9 +2719,14 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 		List<BuyBoxModel> buyBoxModelList = null;
 		String selectedSize = null;
 
-		if (null != wishlist2EntryModel.getUssid() && null != getBuyBoxDao().getBuyBoxPriceForUssId(wishlist2EntryModel.getUssid()))
+		//Code Change for TISPT-167
+		final String usssid = wishlist2EntryModel.getUssid();
+
+		if (StringUtil.isNotEmpty(usssid))
 		{
-			buyBoxModelList = getBuyBoxDao().getBuyBoxPriceForUssId(wishlist2EntryModel.getUssid());
+			//final Code Change for TISPT-167
+			buyBoxModelList = getBuyBoxDao().getBuyBoxPriceForUssId(usssid);
+			wishlistProductDtoObj.setUSSID(checkDataValue(usssid));
 		}
 		List<BrandModel> brandModelList = null;
 		if (null != productModel.getBrands() && !productModel.getBrands().isEmpty())
@@ -2713,7 +2734,6 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			brandModelList = (List<BrandModel>) productModel.getBrands();
 		}
 
-		wishlistProductDtoObj.setUSSID(checkDataValue(wishlist2EntryModel.getUssid()));
 		if (null != color)
 		{
 			wishlistProductDtoObj.setColor(checkDataValue(color));
@@ -2744,8 +2764,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 		wishlistProductDtoObj.setSellerId(sellerId);
 		wishlistProductDtoObj.setSellerName(sellerName);
-		selectedSize = (null != wishlist2EntryModel.getSizeSelected() && wishlist2EntryModel.getSizeSelected().booleanValue()) ? MarketplacecommerceservicesConstants.Y
-				: MarketplacecommerceservicesConstants.N;
+		selectedSize = (null != wishlist2EntryModel.getSizeSelected() && wishlist2EntryModel.getSizeSelected().booleanValue())
+				? MarketplacecommerceservicesConstants.Y : MarketplacecommerceservicesConstants.N;
 
 		wishlistProductDtoObj.setSizeSelected(selectedSize);
 
@@ -2776,12 +2796,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 	private GetWishListProductWsDTO setWSWishlistPrice(final List<BuyBoxModel> buyBoxModelList,
 			final GetWishListProductWsDTO getWishListProductWsObj) throws EtailNonBusinessExceptions
 	{
-
 		Double finalPrice = Double.valueOf(0.0);
-		if (buyBoxModelList != null && !buyBoxModelList.isEmpty() && null != buyBoxModelList.get(0))
+		//Code Change for TISPT-167
+		if (CollectionUtils.isNotEmpty(buyBoxModelList) && null != buyBoxModelList.get(0))
 		{
-			final Double mopPrice = buyBoxModelList.get(0).getPrice();
-			final Double mrpPrice = buyBoxModelList.get(0).getMrp();
+			final BuyBoxModel oModel = buyBoxModelList.get(0);
+			final Double mopPrice = oModel.getPrice();
+			final Double mrpPrice = oModel.getMrp();
 			if (mopPrice != null && mopPrice.doubleValue() > 0.0)
 			{
 				finalPrice = mopPrice;
@@ -2857,8 +2878,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 								}
 								else
 								{
-									delivery.setDeliveryCost(Optional.ofNullable(deliveryMode.getDeliveryCost().getFormattedValue())
-											.orElse(""));
+									delivery.setDeliveryCost(
+											Optional.ofNullable(deliveryMode.getDeliveryCost().getFormattedValue()).orElse(""));
 								}
 								delivery.setDesc(Optional.ofNullable(deliveryMode.getDescription()).orElse(""));
 								deliveryList.add(delivery);
@@ -2871,9 +2892,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			else
 			{
 
-				if (null != wishlist2EntryModel.getUssid()
-						&& null != getMplDeliveryCostService().getDeliveryModesAndCost(MarketplacecommerceservicesConstants.INR,
-								wishlist2EntryModel.getUssid()))
+				if (null != wishlist2EntryModel.getUssid() && null != getMplDeliveryCostService()
+						.getDeliveryModesAndCost(MarketplacecommerceservicesConstants.INR, wishlist2EntryModel.getUssid()))
 				{
 					deliveryModes = getMplDeliveryCostService().getDeliveryModesAndCost(MarketplacecommerceservicesConstants.INR,
 							wishlist2EntryModel.getUssid());
@@ -2966,10 +2986,10 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 						for (final DeliveryDetailsData deliveryDetailsData : pinCodeEntry.getValidDeliveryModes())
 						{
 							// Checking only  for selected delivery mode in cart page with pincode serviceablity response
-							if (((selectedDeliveryMode.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY) && deliveryDetailsData
-									.getType().equalsIgnoreCase(MarketplacecommerceservicesConstants.HD)) || (selectedDeliveryMode
-									.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY) && deliveryDetailsData
-									.getType().equalsIgnoreCase(MarketplacecommerceservicesConstants.ED)))
+							if (((selectedDeliveryMode.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)
+									&& deliveryDetailsData.getType().equalsIgnoreCase(MarketplacecommerceservicesConstants.HD))
+									|| (selectedDeliveryMode.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)
+											&& deliveryDetailsData.getType().equalsIgnoreCase(MarketplacecommerceservicesConstants.ED)))
 									&& deliveryDetailsData.getIsCOD() != null && !deliveryDetailsData.getIsCOD().booleanValue())
 							{
 								codEligible = false;
@@ -2999,8 +3019,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 					{
 						if (marketplaceDeliveryModeData.getCode() != null && marketplaceDeliveryModeData.getSellerArticleSKU() != null)
 						{
-							final SellerInformationModel sellerInfoModel = getMplSellerInformationService().getSellerDetail(
-									marketplaceDeliveryModeData.getSellerArticleSKU());
+							final SellerInformationModel sellerInfoModel = getMplSellerInformationService()
+									.getSellerDetail(marketplaceDeliveryModeData.getSellerArticleSKU());
 
 							List<RichAttributeModel> richAttributeModel = null;
 							if (sellerInfoModel != null && sellerInfoModel.getRichAttribute() != null)
@@ -3326,10 +3346,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			catch (final ClientEtailNonBusinessExceptions e)
 			{
 				LOG.error("::::::Exception in calling OMS Inventory reservation:::::::::" + e.getErrorCode());
-				if (null != e.getErrorCode()
-						&& (MarketplacecclientservicesConstants.O0003_EXCEP.equalsIgnoreCase(e.getErrorCode())
-								|| MarketplacecclientservicesConstants.O0004_EXCEP.equalsIgnoreCase(e.getErrorCode()) || MarketplacecclientservicesConstants.O0007_EXCEP
-									.equalsIgnoreCase(e.getErrorCode())))
+				if (null != e.getErrorCode() && (MarketplacecclientservicesConstants.O0003_EXCEP.equalsIgnoreCase(e.getErrorCode())
+						|| MarketplacecclientservicesConstants.O0004_EXCEP.equalsIgnoreCase(e.getErrorCode())
+						|| MarketplacecclientservicesConstants.O0007_EXCEP.equalsIgnoreCase(e.getErrorCode())))
 				{
 					//prepare cartSoftReservationData object only for HD and Ed
 					//skip reservation call for cnc
@@ -3367,9 +3386,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 				{
 					for (final InventoryReservResponse inventoryReservResponse : inventoryReservResponseList)
 					{
-						if (inventoryReservResponse.getReservationStatus() != null
-								&& !inventoryReservResponse.getReservationStatus().equalsIgnoreCase(
-										MarketplacecclientservicesConstants.OMS_INVENTORY_RESV_SUCCESS))
+						if (inventoryReservResponse.getReservationStatus() != null && !inventoryReservResponse.getReservationStatus()
+								.equalsIgnoreCase(MarketplacecclientservicesConstants.OMS_INVENTORY_RESV_SUCCESS))
 						{
 							inventoryReservationStatus = false;
 							break;
@@ -3434,11 +3452,12 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			final InventoryReservResponse inventoryReservResponse = new InventoryReservResponse();
 			inventoryReservResponse.setUSSID(entry.getKey());
 
-			final Integer inventoryInComm = (availableStockMap == null || availableStockMap.get(entry.getKey()) == null) ? Integer
-					.valueOf(0) : availableStockMap.get(entry.getKey());
+			final Integer inventoryInComm = (availableStockMap == null || availableStockMap.get(entry.getKey()) == null)
+					? Integer.valueOf(0) : availableStockMap.get(entry.getKey());
 
-			final String inventoryReservationStatus = (null != inventoryInComm && entry.getValue().intValue() <= inventoryInComm
-					.intValue()) ? MarketplacecommerceservicesConstants.SUCCESS : MarketplacecommerceservicesConstants.FAILURE;
+			final String inventoryReservationStatus = (null != inventoryInComm
+					&& entry.getValue().intValue() <= inventoryInComm.intValue()) ? MarketplacecommerceservicesConstants.SUCCESS
+							: MarketplacecommerceservicesConstants.FAILURE;
 
 			inventoryReservResponse.setReservationStatus(inventoryReservationStatus);
 			inventoryReservResponseList.add(inventoryReservResponse);
@@ -3627,8 +3646,8 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 					if (entryModel.getSelectedUSSID() != null)
 					{
-						final SellerInformationModel sellerInfoModel = getMplSellerInformationService().getSellerDetail(
-								entryModel.getSelectedUSSID());
+						final SellerInformationModel sellerInfoModel = getMplSellerInformationService()
+								.getSellerDetail(entryModel.getSelectedUSSID());
 						List<RichAttributeModel> richAttributeModel = null;
 						if (sellerInfoModel != null && sellerInfoModel.getRichAttribute() != null)
 						{
@@ -3686,64 +3705,64 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			deliveryMode = ussIdBDelMod;
 		}
 		if (ussIdA.doubleValue() == ussIdB.doubleValue()
-				&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT) && ussIdBDelMod
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
+				&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)
+						&& ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
 		{
 			cartSoftReservationData.setParentUSSID(entryModel.getAssociatedItems().get(0));
 			deliveryMode = ussIdADelMod;
 		}
 		else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-				&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY) && ussIdBDelMod
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)))
+				&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)
+						&& ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)))
 		{
 			cartSoftReservationData.setParentUSSID(entryModel.getAssociatedItems().get(0));
 			deliveryMode = ussIdADelMod;
 		}
 		else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-				&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY) && ussIdBDelMod
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)))
+				&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)
+						&& ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)))
 		{
 			cartSoftReservationData.setParentUSSID(entryModel.getAssociatedItems().get(0));
 			deliveryMode = ussIdADelMod;
 		}
 		else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-				&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY) && ussIdBDelMod
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
+				&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)
+						&& ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
 		{
 			cartSoftReservationData.setParentUSSID(entryModel.getAssociatedItems().get(0));
 			deliveryMode = ussIdADelMod;
 		}
 		else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-				&& (ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY) && ussIdADelMod
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
+				&& (ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)
+						&& ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
 		{
 			cartSoftReservationData.setParentUSSID(entryModel.getAssociatedItems().get(1));
 			deliveryMode = ussIdBDelMod;
 		}
 		else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-				&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY) && ussIdBDelMod
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
+				&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)
+						&& ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
 		{
 			cartSoftReservationData.setParentUSSID(entryModel.getAssociatedItems().get(0));
 			deliveryMode = ussIdADelMod;
 		}
 		else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-				&& (ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY) && ussIdADelMod
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
+				&& (ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)
+						&& ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
 		{
 			cartSoftReservationData.setParentUSSID(entryModel.getAssociatedItems().get(1));
 			deliveryMode = ussIdBDelMod;
 		}
 		else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-				&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY) || ussIdBDelMod
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)))
+				&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)
+						|| ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)))
 		{
 			cartSoftReservationData.setParentUSSID(entryModel.getAssociatedItems().get(0));
 			deliveryMode = ussIdADelMod;
 		}
 		else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-				&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY) || ussIdBDelMod
-						.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)))
+				&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)
+						|| ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)))
 		{
 			cartSoftReservationData.setParentUSSID(entryModel.getAssociatedItems().get(1));
 			deliveryMode = ussIdBDelMod;
@@ -4204,102 +4223,106 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 	 */
 	@Override
 	public Map<String, List<String>> checkPincodeGiftCartData(final String defaultPinCodeId,
-			final List<Wishlist2EntryModel> entryModels)
+			final List<Wishlist2EntryModel> entryModels, final Tuple2<?, ?> wishListPincodeObject) //TISPT-179 Point 3
 	{
-		final List<PincodeServiceData> pincodeRequestDataList = new ArrayList<>();
+		//final List<PincodeServiceData> pincodeRequestDataList = new ArrayList<>(); TISPT-179 Point 3
 
 		Map<String, List<String>> giftYourselfDeliveryModeDataMap = null;
 
-		for (final Wishlist2EntryModel wishModel : entryModels)
-		{
-			final PincodeServiceData pincodeServiceData = new PincodeServiceData();
-			final List<MarketplaceDeliveryModeData> deliveryModeDataList = new ArrayList<MarketplaceDeliveryModeData>(); //TISTI-104
-			final ProductModel productModel = wishModel.getProduct();
-			if (null != productModel)
-			{
-				pincodeServiceData.setProductCode(productModel.getCode());
-			}
-			else
-			{
-				LOG.debug("Product Model is null for the wishlist Product");
-			}
+		//TISPT-179 Point 3
+		//		for (final Wishlist2EntryModel wishModel : entryModels)
+		//		{
+		//			final PincodeServiceData pincodeServiceData = new PincodeServiceData();
+		//			final List<MarketplaceDeliveryModeData> deliveryModeDataList = new ArrayList<MarketplaceDeliveryModeData>(); //TISTI-104
+		//			final ProductModel productModel = wishModel.getProduct();
+		//			if (null != productModel)
+		//			{
+		//				pincodeServiceData.setProductCode(productModel.getCode());
+		//			}
+		//			else
+		//			{
+		//				LOG.debug("Product Model is null for the wishlist Product");
+		//			}
+		//
+		//			final SellerInformationModel sellerInfo = getMplSellerInformationService().getSellerDetail(wishModel.getUssid());
+		//			if (wishModel.getUssid() != null && sellerInfo != null)
+		//			{
+		//				String fullfillmentType = MarketplacecommerceservicesConstants.EMPTYSPACE;
+		//				List<RichAttributeModel> richAttributeModel = new ArrayList<RichAttributeModel>();
+		//
+		//				final SellerInformationModel sellerInfoModel = getMplSellerInformationService().getSellerDetail(wishModel.getUssid());
+		//
+		//				if (sellerInfoModel != null && sellerInfoModel.getRichAttribute() != null)
+		//				{
+		//					richAttributeModel = (List<RichAttributeModel>) sellerInfoModel.getRichAttribute();
+		//					fullfillmentType = richAttributeModel.get(0).getDeliveryFulfillModes() != null ? richAttributeModel.get(0)
+		//							.getDeliveryFulfillModes().getCode() : "";
+		//				}
+		//				else
+		//				{
+		//					LOG.info("preparingFinalList sellerInfoModel is null ");
+		//				}
+		//
+		//				final List<MplZoneDeliveryModeValueModel> deliveryModes = getMplDeliveryCostService().getDeliveryModesAndCost(
+		//						MarketplacecommerceservicesConstants.INR, wishModel.getUssid());
+		//				if (null != deliveryModes && !deliveryModes.isEmpty())
+		//				{
+		//					for (final MplZoneDeliveryModeValueModel deliveryEntry : deliveryModes)
+		//					{
+		//						final MarketplaceDeliveryModeData deliveryModeData = new MarketplaceDeliveryModeData();
+		//						final PriceData priceData = formPriceData(deliveryEntry.getValue());
+		//						deliveryModeData.setCode(deliveryEntry.getDeliveryMode().getCode());
+		//						deliveryModeData.setDescription(deliveryEntry.getDeliveryMode().getDescription());
+		//						deliveryModeData.setName(deliveryEntry.getDeliveryMode().getName());
+		//						deliveryModeData.setSellerArticleSKU(wishModel.getUssid());
+		//						deliveryModeData.setDeliveryCost(priceData);
+		//						deliveryModeDataList.add(deliveryModeData);
+		//					}
+		//				}
+		//				pincodeServiceData.setFullFillmentType(fullfillmentType.toUpperCase());
+		//				if (richAttributeModel.get(0).getShippingModes() != null
+		//						&& richAttributeModel.get(0).getShippingModes().getCode() != null)
+		//				{
+		//					pincodeServiceData.setTransportMode(MplCodeMasterUtility.getglobalCode(richAttributeModel.get(0)
+		//							.getShippingModes().getCode().toUpperCase()));
+		//				}
+		//				else
+		//				{
+		//					LOG.info("preparingFinalList Transportmode is null ");
+		//				}
+		//				pincodeServiceData.setSellerId(sellerInfo.getSellerID());
+		//				pincodeServiceData.setUssid(wishModel.getUssid());
+		//
+		//				if (null != richAttributeModel.get(0).getPaymentModes()
+		//						&& ((PaymentModesEnum.valueOf("COD")).toString().equalsIgnoreCase(
+		//								richAttributeModel.get(0).getPaymentModes().getCode()) || (PaymentModesEnum.valueOf("BOTH")).toString()
+		//								.equalsIgnoreCase(richAttributeModel.get(0).getPaymentModes().getCode())))
+		//				{
+		//					pincodeServiceData.setIsCOD(MarketplacecommerceservicesConstants.Y);
+		//				}
+		//				else
+		//				{
+		//					pincodeServiceData.setIsCOD(MarketplacecommerceservicesConstants.N);
+		//				}
+		//				if (wishModel.getProduct() != null && wishModel.getProduct().getMrp() != null)
+		//				{
+		//					pincodeServiceData.setPrice(wishModel.getProduct().getMrp());
+		//				}
+		//				else
+		//				{
+		//					LOG.debug("wishlist2EntryModel product is null ");
+		//				}
+		//				pincodeServiceData.setDeliveryModes(deliveryModeDataList);
+		//				pincodeServiceData.setIsDeliveryDateRequired(MarketplacecommerceservicesConstants.N);
+		//			}
+		//
+		//			pincodeRequestDataList.add(pincodeServiceData);
+		//		}
 
-			final SellerInformationModel sellerInfo = getMplSellerInformationService().getSellerDetail(wishModel.getUssid());
-			if (wishModel.getUssid() != null && sellerInfo != null)
-			{
-				String fullfillmentType = MarketplacecommerceservicesConstants.EMPTYSPACE;
-				List<RichAttributeModel> richAttributeModel = new ArrayList<RichAttributeModel>();
+		//giftYourselfDeliveryModeDataMap = giftYourselfData(defaultPinCodeId, entryModels, pincodeRequestDataList); TISPT-179 Point 3
+		giftYourselfDeliveryModeDataMap = giftYourselfData(defaultPinCodeId, entryModels, wishListPincodeObject);
 
-				final SellerInformationModel sellerInfoModel = getMplSellerInformationService().getSellerDetail(wishModel.getUssid());
 
-				if (sellerInfoModel != null && sellerInfoModel.getRichAttribute() != null)
-				{
-					richAttributeModel = (List<RichAttributeModel>) sellerInfoModel.getRichAttribute();
-					fullfillmentType = richAttributeModel.get(0).getDeliveryFulfillModes() != null ? richAttributeModel.get(0)
-							.getDeliveryFulfillModes().getCode() : "";
-				}
-				else
-				{
-					LOG.info("preparingFinalList sellerInfoModel is null ");
-				}
-
-				final List<MplZoneDeliveryModeValueModel> deliveryModes = getMplDeliveryCostService().getDeliveryModesAndCost(
-						MarketplacecommerceservicesConstants.INR, wishModel.getUssid());
-				if (null != deliveryModes && !deliveryModes.isEmpty())
-				{
-					for (final MplZoneDeliveryModeValueModel deliveryEntry : deliveryModes)
-					{
-						final MarketplaceDeliveryModeData deliveryModeData = new MarketplaceDeliveryModeData();
-						final PriceData priceData = formPriceData(deliveryEntry.getValue());
-						deliveryModeData.setCode(deliveryEntry.getDeliveryMode().getCode());
-						deliveryModeData.setDescription(deliveryEntry.getDeliveryMode().getDescription());
-						deliveryModeData.setName(deliveryEntry.getDeliveryMode().getName());
-						deliveryModeData.setSellerArticleSKU(wishModel.getUssid());
-						deliveryModeData.setDeliveryCost(priceData);
-						deliveryModeDataList.add(deliveryModeData);
-					}
-				}
-				pincodeServiceData.setFullFillmentType(fullfillmentType.toUpperCase());
-				if (richAttributeModel.get(0).getShippingModes() != null
-						&& richAttributeModel.get(0).getShippingModes().getCode() != null)
-				{
-					pincodeServiceData.setTransportMode(MplCodeMasterUtility.getglobalCode(richAttributeModel.get(0)
-							.getShippingModes().getCode().toUpperCase()));
-				}
-				else
-				{
-					LOG.info("preparingFinalList Transportmode is null ");
-				}
-				pincodeServiceData.setSellerId(sellerInfo.getSellerID());
-				pincodeServiceData.setUssid(wishModel.getUssid());
-
-				if (null != richAttributeModel.get(0).getPaymentModes()
-						&& ((PaymentModesEnum.valueOf("COD")).toString().equalsIgnoreCase(
-								richAttributeModel.get(0).getPaymentModes().getCode()) || (PaymentModesEnum.valueOf("BOTH")).toString()
-								.equalsIgnoreCase(richAttributeModel.get(0).getPaymentModes().getCode())))
-				{
-					pincodeServiceData.setIsCOD(MarketplacecommerceservicesConstants.Y);
-				}
-				else
-				{
-					pincodeServiceData.setIsCOD(MarketplacecommerceservicesConstants.N);
-				}
-				if (wishModel.getProduct() != null && wishModel.getProduct().getMrp() != null)
-				{
-					pincodeServiceData.setPrice(wishModel.getProduct().getMrp());
-				}
-				else
-				{
-					LOG.debug("wishlist2EntryModel product is null ");
-				}
-				pincodeServiceData.setDeliveryModes(deliveryModeDataList);
-				pincodeServiceData.setIsDeliveryDateRequired(MarketplacecommerceservicesConstants.N);
-			}
-
-			pincodeRequestDataList.add(pincodeServiceData);
-		}
-
-		giftYourselfDeliveryModeDataMap = giftYourselfData(defaultPinCodeId, entryModels, pincodeRequestDataList);
 		return giftYourselfDeliveryModeDataMap;
 	}
 
@@ -4310,19 +4333,24 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 	 * @param defaultPinCodeId
 	 * @param entryModels
 	 * @param pincodeRequestDataList
+	 * @param wishListPincodeObject
 	 * @return giftYourselfDeliveryModeDataMap
 	 */
+	//TISPT-179 Point 3
+	//private Map<String, List<String>> giftYourselfData(final String defaultPinCodeId, final List<Wishlist2EntryModel> entryModels,final List<PincodeServiceData> pincodeRequestDataList)
 	private Map<String, List<String>> giftYourselfData(final String defaultPinCodeId, final List<Wishlist2EntryModel> entryModels,
-			final List<PincodeServiceData> pincodeRequestDataList)
+			final Tuple2<?, ?> wishListPincodeObject)
+
 	{
 		List<PinCodeResponseData> pinCodeResponseDataList = null;
 		List<String> deliveryDetailsList = null;
 		final Map<String, List<String>> giftYourselfDeliveryModeDataMap = new HashMap<String, List<String>>();
 		final Map<String, String> productUSSIDDetails = getUSSIDDetails(entryModels);
-		if (CollectionUtils.isNotEmpty(pincodeRequestDataList) && MapUtils.isNotEmpty(productUSSIDDetails))
+
+		if (MapUtils.isNotEmpty(productUSSIDDetails))
 		{
 			deliveryDetailsList = new ArrayList<String>();
-			pinCodeResponseDataList = getServiceablePinCodeCart(defaultPinCodeId, pincodeRequestDataList);
+			pinCodeResponseDataList = (List<PinCodeResponseData>) wishListPincodeObject.getSecond();
 			if (CollectionUtils.isNotEmpty(pinCodeResponseDataList))
 			{
 				for (final PinCodeResponseData pinCodeResponseData : pinCodeResponseDataList)
@@ -4338,6 +4366,26 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 				}
 			}
 		}
+		//TISPT-179 Point 3
+		//		if (CollectionUtils.isNotEmpty(pincodeRequestDataList) && MapUtils.isNotEmpty(productUSSIDDetails))
+		//		{
+		//			deliveryDetailsList = new ArrayList<String>();
+		//			pinCodeResponseDataList = getServiceablePinCodeCart(defaultPinCodeId, pincodeRequestDataList);
+		//			if (CollectionUtils.isNotEmpty(pinCodeResponseDataList))
+		//			{
+		//				for (final PinCodeResponseData pinCodeResponseData : pinCodeResponseDataList)
+		//				{
+		//					final List<DeliveryDetailsData> deliveryData = pinCodeResponseData.getValidDeliveryModes();
+		//					deliveryDetailsList = getDeliveryData(deliveryData);
+		//
+		//					if (productUSSIDDetails.containsKey(pinCodeResponseData.getUssid()))
+		//					{
+		//						giftYourselfDeliveryModeDataMap.put(productUSSIDDetails.get(pinCodeResponseData.getUssid()),
+		//								deliveryDetailsList);
+		//					}
+		//				}
+		//			}
+		//		}
 		return giftYourselfDeliveryModeDataMap;
 	}
 
@@ -4422,7 +4470,7 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 	@Override
 	public void saveDeliveryMethForFreebie(final CartModel cartModel,
 			final Map<String, MplZoneDeliveryModeValueModel> freebieModelMap, final Map<String, Long> freebieParentQtyMap)
-			throws EtailNonBusinessExceptions
+					throws EtailNonBusinessExceptions
 	{
 		if (cartModel != null && cartModel.getEntries() != null && freebieModelMap != null && !freebieModelMap.isEmpty())
 		{
@@ -4472,56 +4520,56 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 				mplDeliveryMode = freebieModelMap.get(cartEntryModel.getAssociatedItems().get(1));
 			}
 			if (ussIdA.doubleValue() == ussIdB.doubleValue()
-					&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT) && ussIdBDelMod
-							.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
+					&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)
+							&& ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
 			{
 				mplDeliveryMode = freebieModelMap.get(cartEntryModel.getAssociatedItems().get(0));
 			}
 			else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-					&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY) && ussIdBDelMod
-							.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)))
+					&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)
+							&& ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)))
 			{
 				mplDeliveryMode = freebieModelMap.get(cartEntryModel.getAssociatedItems().get(0));
 			}
 			else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-					&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY) && ussIdBDelMod
-							.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)))
+					&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)
+							&& ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)))
 			{
 				mplDeliveryMode = freebieModelMap.get(cartEntryModel.getAssociatedItems().get(0));
 			}
 			else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-					&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY) && ussIdBDelMod
-							.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
+					&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)
+							&& ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
 			{
 				mplDeliveryMode = freebieModelMap.get(cartEntryModel.getAssociatedItems().get(0));
 			}
 			else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-					&& (ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY) && ussIdADelMod
-							.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
+					&& (ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)
+							&& ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
 			{
 				mplDeliveryMode = freebieModelMap.get(cartEntryModel.getAssociatedItems().get(1));
 			}
 			else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-					&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY) && ussIdBDelMod
-							.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
+					&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)
+							&& ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
 			{
 				mplDeliveryMode = freebieModelMap.get(cartEntryModel.getAssociatedItems().get(0));
 			}
 			else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-					&& (ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY) && ussIdADelMod
-							.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
+					&& (ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)
+							&& ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.CLICK_COLLECT)))
 			{
 				mplDeliveryMode = freebieModelMap.get(cartEntryModel.getAssociatedItems().get(1));
 			}
 			else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-					&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY) || ussIdBDelMod
-							.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)))
+					&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)
+							|| ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)))
 			{
 				mplDeliveryMode = freebieModelMap.get(cartEntryModel.getAssociatedItems().get(0));
 			}
 			else if (ussIdA.doubleValue() == ussIdB.doubleValue()
-					&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY) || ussIdBDelMod
-							.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)))
+					&& (ussIdADelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.EXPRESS_DELIVERY)
+							|| ussIdBDelMod.equalsIgnoreCase(MarketplacecommerceservicesConstants.HOME_DELIVERY)))
 			{
 				mplDeliveryMode = freebieModelMap.get(cartEntryModel.getAssociatedItems().get(1));
 			}
@@ -4637,10 +4685,10 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 						if (deliveryDetailsData != null && abstractOrderEntryModel != null
 								&& abstractOrderEntryModel.getSelectedUSSID().equalsIgnoreCase(pinCodeResponseData.getUssid()))
 						{
-							inventory = (deliveryDetailsData.getInventory() != null) ? Long
-									.parseLong(deliveryDetailsData.getInventory()) : inventory;
-							selectedQuantity = (abstractOrderEntryModel.getQuantity() != null) ? abstractOrderEntryModel.getQuantity()
-									.longValue() : selectedQuantity;
+							inventory = (deliveryDetailsData.getInventory() != null) ? Long.parseLong(deliveryDetailsData.getInventory())
+									: inventory;
+							selectedQuantity = (abstractOrderEntryModel.getQuantity() != null)
+									? abstractOrderEntryModel.getQuantity().longValue() : selectedQuantity;
 							if (inventory >= selectedQuantity)
 							{
 								validDeliveryDetailsData.add(deliveryDetailsData);
